# HiReFF

./: .gitignore  CLAUDE.md  LICENSE  README.md  demo_gradio.py  demo_viser.py  index.html  infer.py  infer_360_video.py  infer_frame.py  infer_multiview.py  infer_speed.py  infer_timeseq.py  infer_video.py  pyproject.toml  render_profile.json  requirements.txt  run_batch.sh  run_single.sh  train.py  train_multi.py  train_npz.py  train_npz_multi_dataset.py  vggt_to_gs.py  vggt_to_ply.py  visual_util.py
docs/: data_preparation.md
hireff/: __init__.py
hireff/heads/: camera_head.py  dpt_head.py  gs_adaptor.py  head_act.py  hireff_dpt_gs_head.py  utils.py
hireff/layers/: attention.py
hireff/models/: __init__.py  aggregator.py  feat_extractor.py  hireff_model.py  vit.py
hireff/rendering/: __init__.py  camera_mapping.py  render_image.py
hireff/training/: __init__.py  loss.py  render_loss.py  train_config.py
hireff/utils/: __init__.py  depth2points.py  geometry.py  inference_utils.py  interpolate.py  load_fn.py  mem_inspect.py  pose_enc.py  visualization.py  voxelizaton_fusion.py
merging/: merge.py
preprocessing/dna/: README.md  SMCReader.py  cps2npz.py  smc2cps.py  smc2npz.py
preprocessing/mvh/: README.md  mvh2npz.py  mvh2npz.sh
preprocessing/zju/: README.md  zju2npz.py  zju2npz.sh
static/css/: index.css
static/js/: index.js
vggt/: __init__.py
vggt/heads/: __init__.py  gs_adaptor.py  head_act.py  vggt_dpt_gs_head.py  vggt_dpt_gs_head_main.py
vggt/layers/: attention.py  block.py
vggt/models/: __init__.py  aggregator.py  feat_extractor.py  vggt.py  vggt_origin.py
vggt/rendering/: camera_mapping.py  dna_rendering_cam_para.json  gs_ras.py  render_image.py  (+1 more)
(+28 files in other folders)
