[project]
name = "hireff"
description = "HiReFF: 4D Gaussian Human Reconstruction via VGGT"
authors = [{name = "Jianyuan Wang", email = "jianyuan@robots.ox.ac.uk"}]
requires-python = ">= 3.10"
version = "0.1.0"
dependencies = [
    "numpy<2",
    "Pillow",
    "huggingface_hub",
    "einops",
    "safetensors",
    "opencv-python",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scipy",
    "imageio",
    "scikit-image",
    "timm",
]

[project.optional-dependencies]
gsplat = ["gsplat>=1.0.0"]
train = ["tensorboard", "tqdm"]
demo = [
    "gradio>=5.17",
    "viser>=0.2",
    "trimesh",
    "matplotlib",
    "requests",
    "hydra-core",
    "omegaconf",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vggt*"]
